--- a/templates/form.html
+++ b/templates/form.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <body>
-    <form action = "http://localhost:5000/result" method = "POST">
+    <form action = "/result" method = "POST">
         <p>Age <input type = "text" name = "Age" /></p>
 
 <tr>
